docs/api/qiskit/0.19/qiskit.ignis.mitigation.tensored_meas_cal.mdx
---
title: tensored_meas_cal (v0.19)
description: API reference for qiskit.ignis.mitigation.tensored_meas_cal in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.ignis.mitigation.tensored_meas_cal
---

<span id="tensored-meas-cal" />

# tensored\_meas\_cal

<Function id="qiskit.ignis.mitigation.tensored_meas_cal" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/mitigation/measurement/circuits.py" signature="tensored_meas_cal(mit_pattern=None, qr=None, cr=None, circlabel='')">
  Return a list of calibration circuits

  **Parameters**

  *   **mit\_pattern** (`Optional`\[`List`\[`List`\[`int`]]]) – Qubits on which to perform the measurement correction, divided to groups according to tensors. If None and qr is given then assumed to be performed over the entire qr as one group (default None).
  *   **qr** (`Union`\[`int`, `List`\[[`QuantumRegister`](qiskit.circuit.QuantumRegister "qiskit.circuit.quantumregister.QuantumRegister")], `None`]) – A quantum register (or its size).
  *   **None** (*If*) –
  *   **created** (*one is*) –
  *   **cr** (`Union`\[`int`, `List`\[[`ClassicalRegister`](qiskit.circuit.ClassicalRegister "qiskit.circuit.classicalregister.ClassicalRegister")], `None`]) – A classical register (or its size).
  *   **None** –
  *   **created** –
  *   **circlabel** (`str`) – A string to add to the front of circuit names for unique identification (default ‘ ‘).

  **Return type**

  `Tuple`\[`List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")], `List`\[`List`\[`int`]]]

  **Returns**

  A list of two QuantumCircuit objects containing the calibration circuits mit\_pattern

  ## Additional Information:

  The returned circuits are named circlabel+cal\_XXX where XXX is the basis state, e.g., cal\_000 and cal\_111.

  Pass the results of these circuits to the TensoredMeasurementFitter constructor.

  **Raises**

  *   **QiskitError** – if both mit\_pattern and qr are None.
  *   **QiskitError** – if a qubit appears more than once in mit\_pattern.
</Function>

